# AIchatProject

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  agents.py  api_server.py  demo_cases.py  docker-compose.yml  graph.py  graph_demo.py  install.bat  main.py  model_manager.py  offline_demo.py  plugin_loader.py  quality_evaluator.py  report_generator.py  requirements.txt  start_demo.bat  webui.py
agent_registry/: __init__.py  agent_meta.py  default_agents.py  registry.py
agents/: README.md
backend-java/: Dockerfile  README.md  pom.xml
config/: README.md  __init__.py  agents.yaml  config_loader.py  models.yaml  settings.yaml
core/: __init__.py  quality_evaluator.py  state.py  workflow.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUG_FIX_LOG.md  CODEX_COLLAB_RULES.md  CODEX_PROJECT_CONTEXT.md  CODEX_UI_WORKFLOW.md  CODE_AGENT_NODE_GUIDE.md  CODE_HEALTH_REVIEW.md  CPP_RUNNER_SANDBOX.md  DEFENSE_QA.md  DEFENSE_SCRIPT.md  DELIVERY_STRUCTURE.md  DEMO_FLOW.md  DEMO_SCRIPT.md  DOCKER_COMPOSE_GUIDE.md  DOCUMENT_INDEX.md  DUAL_TRACK_ARCHITECTURE.md  DUAL_TRACK_TEST_CHECKLIST.md  FIGMA_UI_WORKFLOW.md  FINAL_CHECKLIST.md  FIX_PLAN.md  FRAMEWORK_EXTENSION_ARCHITECTURE.md  FRAMEWORK_EXTENSION_BOUNDARY.md  FRAMEWORK_EXTENSION_CANDIDATES.md  FRAMEWORK_EXTENSION_PLAN.md  INNOVATION_POINTS.md  ISSUE_TRIAGE.md  LOCAL_V2_STARTUP.md  MAINTENANCE_GUIDE.md  PRO.md  (+30 more)
runner-cpp/: CMakeLists.txt  README.md
runner-cpp/examples/: sample_task.json
runner-cpp/src/: SandboxRunner.cpp  SandboxRunner.h  SecurityScanner.cpp  SecurityScanner.h  main.cpp
(+234 files in other folders)
